<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPost">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:background="#FFf9f9f9"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/tv_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/post_memo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="5dp">

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@drawable/shape_text_box"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_add_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/shape_button"
                        android:paddingLeft="8dp"
                        android:paddingTop="1dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="1dp"
                        android:minHeight="20dp"
                        android:text="@string/post_add_tag" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:orientation="horizontal" />

                    <TextView
                        android:id="@+id/btn_clear_memo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="#ffdddddd"
                        android:padding="3dp"
                        android:text="@string/post_clear"
                        android:textAlignment="center" />

                </LinearLayout>


                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    tools:ignore="SpeakableTextPresentCheck">

                    <LinearLayout
                        android:id="@+id/box_tags"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" />

                </HorizontalScrollView>

            </LinearLayout>

            <TextView
                android:id="@+id/post_title_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/post_cover" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="5dp">

                <VideoView
                    android:id="@+id/post_player"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_gravity="center|top"
                    android:visibility="invisible" />

                <SeekBar
                    android:id="@+id/post_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="10dp"
                    android:scrollbarSize="25dp" />
            </LinearLayout>


            <ProgressBar
                android:id="@+id/post_progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="5dp"
                android:minHeight="30dp"
                android:progress="0" />

            <TextView
                android:id="@+id/post_tv_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="28dp">


            <Button
                android:id="@+id/post_btn_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button_big"
                android:enabled="false"
                android:paddingLeft="90dp"
                android:paddingTop="13dp"
                android:paddingRight="90dp"
                android:paddingBottom="13dp"
                android:text="@string/post_publish"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox_accept_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="true"
                android:text="@string/post_accept_policy"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>